# bracket-terminal

./: Cargo.toml  README.md
examples/: astar_mouse.rs  dwarfmap.rs  hello_minimal.rs  hello_terminal.rs  keyboard.rs  sparse.rs  textsprites.rs  tiles.rs  walking.rs
src/: bterm.rs  console.rs  initializer.rs  lib.rs  multi_tile_sprite.rs  simple_console.rs  sparse_console.rs
src/hal/: mod.rs
src/hal/amethyst_be/: dummy.rs  font.rs  init.rs  mainloop.rs
src/hal/crossterm_be/: main_loop.rs  mod.rs  simple_console_backing.rs
src/hal/curses/: main_loop.rs  mod.rs  simple_console_backing.rs  sparse_console_backing.rs
src/hal/wasm/: font.rs  init.rs  mainloop.rs  simple_console_backing.rs  sparse_console_backing.rs
