[package]
name = "bracket-terminal"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = false
description = "ASCII/Codepage 437 terminal emulator with a game loop. Defaults to OpenGL, also support Amethyst, Curses and Crossterm for output. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-terminal"
repository = "https://github.com/thebracket/bracket-terminal"
readme = "README.md"
keywords = ["roguelike", "gamedev", "terminal", "console", "ascii", "cp437"]
categories = ["game-engines"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-color = { git = "https://github.com/thebracket/bracket-color" }
bracket-geometry = { git = "https://github.com/thebracket/bracket-geometry" }
flate2 = "1.0.13"
lazy_static = "1.4.0"
object-pool = "0.4"
byteorder = "1.3.4"
glow = { version = "0.4.0", optional = true }
image = { version = "0.22.4", default-features = false, features = ["jpeg", "png_codec"], optional = true }
crossterm = { version = "0.16.0", optional = true }
pancurses = { version = "0.16.1", optional = true }
amethyst = { version = "0.13", features = [ "tiles" ], optional = true }
ultraviolet = "0.4.5"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = {version = "0.23.0", optional = true }

[features]
default = [ "opengl" ]
opengl = [ "glow", "image", "glutin" ]
curses = [ "pancurses" ]
amethyst_engine_vulkan = [ "amethyst/vulkan", "image" ]
amethyst_engine_metal = [ "amethyst/metal", "image" ]

